# oncell

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md
python/: README.md  pyproject.toml
python/oncell/: __init__.py  agent.py  cell.py  client.py  db.py  heartbeat.py  journal.py  orchestrator.py  runtime.py  search.py  store.py
python/tests/: test_cell.py  test_client.py  test_crash_recovery.py
runtime/: Dockerfile  entrypoint.sh
typescript/: README.md  package-lock.json  package.json
typescript/src/: agent.ts  cell.ts  client.ts  db.ts  heartbeat.ts  index.ts  journal.ts  orchestrator.ts  runtime.ts  search.ts  store.ts
typescript/tests/: cell.test.ts  client.test.ts
