[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oncell"
version = "0.1.0"
description = "Per-customer isolated compute for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Anup Singh" }]
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.20"]
http = ["aiohttp>=3.9"]
all = ["oncell[llm,http]"]

[project.urls]
Homepage = "https://oncell.ai"
Documentation = "https://oncell.ai/docs"
Repository = "https://github.com/anup-singhai/oncell"
