[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oncell"
version = "0.2.0"
description = "OnCell SDK — REST API client for per-customer isolated compute"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Anup Singh" }]
keywords = ["oncell", "ai", "agents", "compute", "cells", "isolated"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.urls]
Homepage = "https://oncell.ai"
Documentation = "https://oncell.ai/docs"
Repository = "https://github.com/oncellai/oncell"

[tool.pytest.ini_options]
asyncio_mode = "auto"
